try to clean my code